--- a/src/main/web/login.html
+++ b/src/main/web/login.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>登录</title>
-    <link  rel="stylesheet"   href="css/logincss.css">
-    <link rel="stylesheet" href="css/common.css">
-    <link rel="stylesheet" href="css/loginregister.css">
-    <link rel="stylesheet" href="css/valifrom.css">
+    <link  rel="stylesheet"   href="/css/logincss.css">
+    <link rel="stylesheet" href="/css/common.css">
+    <link rel="stylesheet" href="/css/loginregister.css">
+    <link rel="stylesheet" href="/css/valifrom.css">
     <style>
         .form-box .input-box {
             overflow: hidden;
         }
     </style>
-    <link rel="stylesheet" href="css/layer.css" id="layui_layer_skinlayercss">
-    <link rel="stylesheet" href="js/users.js">
-    <link rel="stylesheet" href="js/utils.js">
+    <link rel="stylesheet" href="/css/layer.css" id="layui_layer_skinlayercss">
+    <link rel="stylesheet" href="/js/users.js">
+    <link rel="stylesheet" href="/js/utils.js">
 </head>
 <body>
 <div class="head_box">
@@ -23,33 +23,6 @@
             <a class="head_nav_a">欢迎光临本店</a>
             <span>|</span>
             <a class="head_nav_a">收藏本店</a>
-            <!-- <span>|</span>
-             <a class="head_nav_a">米聊</a>
-             <span>|</span>
-             <a class="head_nav_a">游戏</a>
-             <span>|</span>
-             <a class="head_nav_a">多看阅读</a>
-             <span>|</span>
-             <a class="head_nav_a">云服务</a>
-             <span>|</span>
-             <a class="head_nav_a">大米移动版</a>
-             <span>|</span>
-             <a class="head_nav_a">问题反馈</a>
-             <span>|</span>
-             <a class="head_nav_a" id="Select_Region_but">Select Region</a>-->
-        </div>
-        <div id="head_right">
-            <div id="head_landing">
-                <a class="head_nav_a">登陆</a>
-                <span>|</span>
-                <a class="head_nav_a" href="register.html">注册</a>
-            </div>
-          <!--  <div id="head_car">
-                <a class="head_car_text">购物车（0）</a>
-                <div id="car_content" style="height: 0px;width:0px ;background-color: #edffc6;z-index: 999">
-                    <a class="car_text"></a>
-                </div>
-            </div>-->
         </div>
     </div>
 </div>
@@ -165,10 +138,10 @@
     </div>
 </div>
     </div>
-<script src="js/jquery-1.9.1.min.js" type="text/javascript"></script>
-<script src="js/main.js" type="text/javascript"></script>
-<script src="js/users.js" type="text/javascript"></script>
-<script src="js/layer.min.js"></script>
-<script src="js/layer.min.js"></script>
+<script src="/js/jquery-1.9.1.min.js" type="text/javascript"></script>
+<script src="/js/main.js" type="text/javascript"></script>
+<script src="/js/users.js" type="text/javascript"></script>
+<script src="/js/layer.min.js"></script>
+<script src="/js/layer.min.js"></script>
 </body>
 </html>
