--- a/src/main/web/register.html
+++ b/src/main/web/register.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>注册用户</title>
-    <link  rel="stylesheet"   href="css/logincss.css">
-    <link rel="stylesheet" href="css/common.css">
-    <link rel="stylesheet" href="css/loginregister.css">
-    <link rel="stylesheet" href="css/valifrom.css">
+    <link  rel="stylesheet"   href="/css/logincss.css">
+    <link rel="stylesheet" href="/css/common.css">
+    <link rel="stylesheet" href="/css/loginregister.css">
+    <link rel="stylesheet" href="/css/valifrom.css">
 
-   <link rel="stylesheet" href="css/layer.css" id="layui_layer_skinlayercss"></head>
-<link rel="stylesheet" href="js/users.js">
-<link rel="stylesheet" href="js/utils.js">
+   <link rel="stylesheet" href="/css/layer.css" id="layui_layer_skinlayercss"></head>
+<link rel="stylesheet" href="/js/users.js">
+<link rel="stylesheet" href="/js/utils.js">
 
 </head>
-<body>
+<body ng-app="register" ng-controller="registerCtrl">
 <div class="head_box">
     <div id="head_wrap">
         <div id="head_nav">
@@ -22,31 +22,11 @@
             <a class="head_nav_a">收藏本店</a>
             <span>|</span>
              <a class="head_nav_a"  href="login.html">注册完了>>去登陆吧</a>
-            <!-- <span>|</span>
-          <a class="head_nav_a">游戏</a>
-          <span>|</span>
-          <a class="head_nav_a">多看阅读</a>
-          <span>|</span>
-          <a class="head_nav_a">云服务</a>
-          <span>|</span>
-          <a class="head_nav_a">大米移动版</a>
-          <span>|</span>
-          <a class="head_nav_a">问题反馈</a>
-          <span>|</span>
-          <a class="head_nav_a" id="Select_Region_but">Select Region</a>-->
         </div>
         <div id="head_right">
             <div id="head_landing">
                 <a href="login.html" class="head_nav_a">登陆</a>
-               <!-- <span>|</span>
-                <a class="head_nav_a">注册</a>-->
             </div>
-           <!-- <div id="head_car">
-                <a class="head_car_text">购物车（0）</a>
-                <div id="car_content" style="height: 0px;width:0px ;background-color: #edffc6;z-index: 999">
-                    <a class="car_text"></a>
-                </div>
-            </div>-->
         </div>
     </div>
 </div>
@@ -58,14 +38,14 @@
                 <form action="" method="post">
                     <div class="input-box input-box1 onfocusstyle user-word">
                         <label for="username" class="icon-user"></label>
-                        <input type="text" name="username" id="username" value="" placeholder="用户名" maxlength="20" autocomplete="off">
+                        <input type="text" name="username" id="username"  ng-model="username" value="" placeholder="用户名" maxlength="20" autocomplete="off">
                         <div class="Validform_checktip formtip">
                             <span class="i-tip"><i></i><label>支持中文、字母、数字、“-”“_”的组合</label></span>
                         </div>
                     </div>
                     <div class="input-box onfocusstyle position-input p-w">
                         <label class="icon-phone" for="mobile"></label>
-                        <input type="text" id="mobile" value="" placeholder="手机号码" maxlength="11" autocomplete="off">
+                        <input type="text" id="mobile" value="" placeholder="手机号码" ng-model="mobile" maxlength="11" autocomplete="off">
                         <div class="Validform_checktip formtip">
                             <span class=""><i></i><label></label></span>
                         </div>
@@ -74,27 +54,27 @@
 
                     <div class="input-box onfocusstyle  pass-w">
                         <label class="icon-setpassw" for="password"></label>
-                        <input type="password" name="password" id="password" value="" placeholder="请输入密码" maxlength="20" min="8" autocomplete="off">
+                        <input type="password" name="password" id="password" ng-model="password" value="" placeholder="请输入密码" maxlength="20" min="8" autocomplete="off">
                         <div class="Validform_checktip formtip">
                             <span class="i-tip"><i></i><label>建议使用字母、数字和符号两种及以上的组合，6-20个字符</label></span>
                         </div>
                     </div>
                     <div class="input-box onfocusstyle position-input  pass-w2">
                         <label class="icon-setpassw" for="repassword"></label>
-                        <input type="password" name="repassword" id="repassword" value="" placeholder="请再次输入密码" maxlength="20">
+                        <input type="password" name="repassword" id="repassword" ng-model="repassword" value="" placeholder="请再次输入密码" maxlength="20">
                         <div class="Validform_checktip formtip">
                             <span class=""><i></i><label></label></span>
                         </div>
                     </div>
-                    <div class="check onfocusstyle" style="position: relative;">
-                        <input type="checkbox" nullmsg="请阅读并选择" name="agree" id="agree" value="1">&nbsp;&nbsp;<label for="agree">我已阅读并同意</label>
-                        <a href="javascript:void(0);" class="blue" id="rule">《商城系统用户协议》</a>
-                        <div class="Validform_checktip formtip" style="top: 0px;">
-                            <span class=""><i></i><label></label></span>
-                        </div>
-                    </div>
+                    <!--<div class="check onfocusstyle" style="position: relative;">-->
+                        <!--<input type="checkbox" nullmsg="请阅读并选择" name="agree" id="agree" value="1">&nbsp;&nbsp;<label for="agree">我已阅读并同意</label>-->
+                        <!--<a href="javascript:void(0);" class="blue" id="rule">《商城系统用户协议》</a>-->
+                        <!--<div class="Validform_checktip formtip" style="top: 0px;">-->
+                            <!--<span class=""><i></i><label></label></span>-->
+                        <!--</div>-->
+                    <!--</div>-->
                     <div class="input-box sub-box">
-                        <input type="button" id="reg" value="注册">
+                        <input type="button" id="reg" ng-click="submitFrom()" value="注册">
                     </div>
                 </form>
             </div>
@@ -169,10 +149,45 @@
     </div>
 </div>
 
-<script src="js/jquery-1.9.1.min.js" type="text/javascript"></script>
-<script src="js/main.js" type="text/javascript"></script>
-<script src="js/users.js" type="text/javascript"></script>
-<script src="js/layer.min.js"></script>
+<script src="/js/jquery-1.9.1.min.js" type="text/javascript"></script>
+<script src="/js/main.js" type="text/javascript"></script>
+<script src="/js/layer.min.js"></script>
+    <script src="/js/angular/angular.min.js" type="text/javascript"></script>
+
+
+    <script>
+        var app = angular.module('register', []);
+
+        app.controller('registerCtrl', function($scope,$http) {
+            $scope.username = "";
+            $scope.mobile="";
+            $scope.password="";
+            $scope.repassword="";
+            $scope.submitFrom = function() {
+                var username=$scope.username;
+                var mobile=$scope.mobile;
+                var password=$scope.password;
+                var repassword= $scope.repassword;
+                var parme={'username':username,'mobile':mobile,'password':password,'repassword':repassword};
+
+
+                $http({
+                        method:'POST',
+                        url:'/user/saveUser',
+                        data:parme,
+                        dataType:'json',
+                }).success(function(data, status, headers, config){
+                    alert("success");
+                }).error(function(data, status, headers, config){
+                    alert("error");
+                })
+            }
+        });
+
+
+
+
+    </script>
 
 </div>
 </body>
