--- a/src/main/web/register.html
+++ b/src/main/web/register.html
@@ -6,17 +6,19 @@
 
     <meta name="keywords" content="">
     <meta name="description" content="">
+    <link  rel="stylesheet"   href="css/logincss.css">
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/loginregister.css">
     <link rel="stylesheet" href="css/valifrom.css">
-    <link  rel="stylesheet"   href="/css/login.css">
-    <link  rel="stylesheet"   href="/css/logincss.css">
-    <style>
+
+    <link rel="stylesheet" href="css/layer.css" id="layui_layer_skinlayercss"></head>
+<link rel="stylesheet" href="js/users.js">
+<link rel="stylesheet" href="js/utils.js">
+<style>
         .form-box .input-box {
             overflow: visible;
         }
     </style>
-    <link rel="stylesheet" href="css/layer.css" id="layui_layer_skinlayercss">
 
 </head>
 <body ng-app="register" ng-controller="registerCtrl">
@@ -41,7 +43,7 @@
     <div class="ny-body ny-register">
         <div class="left">
             <div class="form-box">
-                <form action="" method="post" >
+                <form action="" method="post" name="registFrom">
                     <div class="input-box input-box1 onfocusstyle user-word">
                         <label for="username" class="icon-user"></label>
                         <input type="text" name="username" id="username"  ng-model="username"  placeholder="用户名" maxlength="20" required="required"   autocomplete="off">
@@ -50,8 +52,8 @@
                         </div>
                     </div>
                     <div class="input-box onfocusstyle position-input p-w">
-                        <label class="icon-phone" for="mobile"></label>
-                        <input type="text" id="mobile" value="" placeholder="手机号码" ng-model="phone" maxlength="11" autocomplete="off" required="required">
+                        <label class="icon-phone" for="phone"></label>
+                        <input type="text" id="phone" value="" placeholder="手机号码" ng-model="phone" maxlength="11" autocomplete="off" required="required">
                         <div class="Validform_checktip formtip">
                             <span class=""><i></i><label></label></span>
                         </div>
@@ -74,7 +76,7 @@
                     </div>
 
                     <div class="input-box sub-box">
-                        <input  type="submit" id="reg" ng-click="register()" value="注册">
+                        <input  type="button" id="reg" ng-click="register()" value="注册">
                     </div>
                 </form>
             </div>
@@ -149,9 +151,9 @@
 </div>
 
     <script src="js/jquery-1.9.1.min.js" type="text/javascript"></script>
+    <script src="js/main.js" type="text/javascript"></script>
     <script src="js/users.js" type="text/javascript"></script>
-    <script src="js/layer.min.js"></script>
-    <script src="/js/angular/angular.min.js" type="text/javascript"></script>
+    <script src="js/angular/angular.min.js" type="text/javascript"></script>
     <script type="text/javascript">
      var app = angular.module('register', []);
       app.controller("registerCtrl",function ($scope,$http) {
@@ -170,35 +172,33 @@
                   "password":password,
                   "repassword":repassword
               };
+              if($scope.registFrom.$valid){
+
               $http({
                   method:'POST',
                   url:'/user/addUsers',
                   data:parme,
-                  dataType:'json',
+//                  dataType:'json',
               }).success(function (data,status, headers, config) {
-                  alert("注册成功！")
-                  window.location="login.html";
+                  if(data=='ERROR'){
+                      alert("注册失败！")
+                  }else {
+                      alert("注册成功！")
+                      window.location = "login.html";
+                  }
               }).error(function (data,status,headers,config) {
+                  console.log(data)
+                  console.log(status)
+                  console.log(headers)
+                  console.log(config)
                   alert("注册失败！");
                   window.location="register.html";
               })
-
+}
 
           }
 
       });
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
